--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
+    "firebase": "^11.6.0",
     "lucide-react": "^0.465.0",
     "next": "^15.1.0",
     "react": "19.0.0-rc-66855b96-20241106",
