feature: implement cookie -session- login

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.465.0",
     "next": "^15.1.0",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -39,6 +41,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
